Blur + Wrapped Translate = Crash #38487

Closed
opened 2014-02-04 19:25:46 +01:00 by Greg Zaal · 8 comments
Member

System Information
Windows 64bit i7, gtx 570

Blender Version
Broken: 18 Dec 2013 (4b206af)
Worked: 23 Nov 2013 (5a4f7f4)

Short description of error
2014-02_19.jpg
The node setup above causes a crash. If no wrapping is used in the Translate node, it works fine. If there is no blur node, it works fine.

Exact steps for others to reproduce the error
As per the screen shot above - use any image, add a blur node, add a translate with Wrapping set to any or both axis and connect to a viewer with Backdrop enabled.

**System Information** Windows 64bit i7, gtx 570 **Blender Version** Broken: 18 Dec 2013 (4b206af) Worked: 23 Nov 2013 (5a4f7f4) **Short description of error** ![2014-02_19.jpg](https://archive.blender.org/developer/F75994/2014-02_19.jpg) The node setup above causes a crash. If no wrapping is used in the Translate node, it works fine. If there is no blur node, it works fine. **Exact steps for others to reproduce the error** As per the screen shot above - use any image, add a blur node, add a translate with Wrapping set to any or both axis and connect to a viewer with Backdrop enabled.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Lukas Tönne was assigned by Greg Zaal 2014-02-04 19:25:46 +01:00
Author
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal

Added subscriber: @brecht

Added subscriber: @brecht

Added subscriber: @AlekseyBabahin

Added subscriber: @AlekseyBabahin

This issue was referenced by blender/blender-addons-contrib@7ee9de29a6

This issue was referenced by blender/blender-addons-contrib@7ee9de29a623cfb2a1efa70eb93e5b18bb8ed144

This issue was referenced by 7ee9de29a6

This issue was referenced by 7ee9de29a623cfb2a1efa70eb93e5b18bb8ed144
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 7ee9de29a6.

Closed by commit 7ee9de29a6.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38487
No description provided.